# FOE

./: CMakeLists.txt  readme.md
code/ui/: FOE  Makefile  effects_panel.h  fx_control.cpp  fx_control.h  project_assets.cpp  project_assets.h  qmake_qmake_immediate.qrc  render_window.cpp  render_window.h  timeline.cpp  timeline.h  top_panel.cpp  ui.cpp  ui.h
code/ui/core/: add_fx.cpp  add_fx.h  import.h  play.cpp  play.h  render.cpp  render.h
code/ui/qss/: darktheme.qss
ui/: FOE.pro  effects_panel.cpp  fx_control.cpp  fx_control.h  main.cpp  project_assets.cpp  project_assets.h  render_window.cpp  render_window.h  timeline.cpp  timeline.h  top_panel.cpp  top_panel.h  ui.cpp  ui.h
ui/core/: add_fx.cpp  add_fx.h  framebuffer.h  import.cpp  import.h  play.cpp  play.h
